--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
@@ -19,3 +20,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  # ...existing code...
